@@ -77,6 +77,9 @@ class FMSApplication(server.Application, log.Loggable):
         self._videoEnabled = False
         self._audioEnabled = False
 
+        self._backupVideoHeader = None
+        self._backupAudioHeader = None
+
         self._backlog = []
         self._headers = []
 
@@ -212,17 +215,26 @@ class FMSApplication(server.Application, log.Loggable):
         fixedTime = self._fixeTimestamp(time)
         flvTag = tags.create_flv_tag(TAG_TYPE_AUDIO, data, fixedTime)
 
+        def addHeader(tag):
+            self.debug("Audio stream sequence header received")
+            self._addHeader(tag)
+            self._gotAudioHeader = True
+            self._tryStarting()
+
         if tag.aac_packet_type == AAC_PACKET_TYPE_SEQUENCE_HEADER:
             assert self._needAudioHeader, "Audio header not expected"
             if self._gotAudioHeader:
-                self.debug("Dropping audio sequence header")
+                self._backupAudioHeader = flvTag
+                self.debug("Keeping audio sequence header just in case the "
+                           "new metadata didn't come yet")
                 return
             else:
-                self.debug("Audio stream sequence header received")
-                self._addHeader(flvTag)
-                self._gotAudioHeader = True
-                self._tryStarting()
+                addHeader(flvTag)
                 return
+        elif self._needAudioHeader and self._backupAudioHeader:
+            self.debug("Sending earlier audio header")
+            addHeader(self._backupAudioHeader)
+            self._backupAudioHeader = None
 
         buffer = self._buildDataBuffer(fixedTime, flvTag)
         buffer.flag_set(gst.BUFFER_FLAG_DELTA_UNIT)
@@ -264,17 +276,26 @@ class FMSApplication(server.Application, log.Loggable):
         fixedTime = self._fixeTimestamp(time)
         flvTag = tags.create_flv_tag(TAG_TYPE_VIDEO, data, fixedTime)
 
+        def addHeader(tag):
+            self.debug("Video stream sequence header received")
+            self._addHeader(tag)
+            self._gotVideoHeader = True
+            self._tryStarting()
+
         if tag.h264_packet_type == H264_PACKET_TYPE_SEQUENCE_HEADER:
             assert self._needVideoHeader, "Video header not expected"
             if self._gotVideoHeader:
-                self.debug("Dropping video sequence header")
+                self._backupVideoHeader = flvTag
+                self.debug("Keeping video sequence header, just in case the "
+                           "new metadata didn't come yet")
                 return
             else:
-                self.debug("Video stream sequence header received")
-                self._addHeader(flvTag)
-                self._gotVideoHeader = True
-                self._tryStarting()
+                addHeader(flvTag)
                 return
+        elif self._needVideoHeader and self._backupVideoHeader:
+            self.debug("Sending earlier audio header")
+            addHeader(self._backupVideoHeader)
+            self._backupVideoHeader = None
 
         buffer = self._buildDataBuffer(fixedTime, flvTag)
 
